Updating the openapi.json file
https://github.com/up-banking/api/pull/141/files
